// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has control props: filterByDone, done 1`] = `
<div
  className="APIComponent-root-4"
>
  <div
    className="MuiPaper-root-8 MuiPaper-elevation1-11 MuiPaper-rounded-9 MuiCard-root-7 APIComponent-card-5"
  >
    <div
      className="MuiCardHeader-root-35"
    >
      <div
        className="MuiCardHeader-content-38"
      >
        <span
          className="MuiTypography-root-41 MuiTypography-headline-46 MuiCardHeader-title-39"
        >
          test0
        </span>
        <span
          className="MuiTypography-root-41 MuiTypography-body1-50 MuiTypography-colorTextSecondary-63 MuiCardHeader-subheader-40"
        >
          cat0
        </span>
      </div>
    </div>
    <div
      className="MuiCardContent-root-65"
    >
      <p
        className="MuiTypography-root-41 MuiTypography-body1-50"
      >
        4 Total Players
      </p>
      <p
        className="MuiTypography-root-41 MuiTypography-body1-50"
      >
        4 Active Players
      </p>
    </div>
    <div
      className="MuiCardActions-root-66"
    >
      <a
        className="MuiButtonBase-root-92 MuiButton-root-68 MuiButton-text-70 MuiButton-flat-73 MuiButton-sizeSmall-89 APIComponent-right-6 MuiCardActions-action-67"
        href="/tournament/mock0"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="MuiButton-label-69"
        >
          Continue
        </span>
        <span
          className="MuiTouchRipple-root-95"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`has control props: filterByDone, done 2`] = `
<div
  className="APIComponent-root-4"
>
  <div
    className="MuiPaper-root-8 MuiPaper-elevation1-11 MuiPaper-rounded-9 MuiCard-root-7 APIComponent-card-5"
  >
    <div
      className="MuiCardHeader-root-35"
    >
      <div
        className="MuiCardHeader-content-38"
      >
        <span
          className="MuiTypography-root-41 MuiTypography-headline-46 MuiCardHeader-title-39"
        >
          test1
        </span>
        <span
          className="MuiTypography-root-41 MuiTypography-body1-50 MuiTypography-colorTextSecondary-63 MuiCardHeader-subheader-40"
        >
          cat1
        </span>
      </div>
    </div>
    <div
      className="MuiCardContent-root-65"
    >
      <p
        className="MuiTypography-root-41 MuiTypography-body1-50"
      >
        7 Total Players
      </p>
      <p
        className="MuiTypography-root-41 MuiTypography-body1-50"
      >
        7 Active Players
      </p>
    </div>
    <div
      className="MuiCardActions-root-66"
    >
      <a
        className="MuiButtonBase-root-92 MuiButton-root-68 MuiButton-text-70 MuiButton-flat-73 MuiButton-sizeSmall-89 APIComponent-right-6 MuiCardActions-action-67"
        href="/tournament/mock1"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="MuiButton-label-69"
        >
          Details
        </span>
        <span
          className="MuiTouchRipple-root-95"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`matches the prior snapshot 1`] = `
<div
  className="APIComponent-root-4"
/>
`;

exports[`matches the prior snapshot 2`] = `
<div
  className="APIComponent-root-4"
>
  <div
    className="MuiPaper-root-8 MuiPaper-elevation1-11 MuiPaper-rounded-9 MuiCard-root-7 APIComponent-card-5"
  >
    <div
      className="MuiCardHeader-root-35"
    >
      <div
        className="MuiCardHeader-content-38"
      >
        <span
          className="MuiTypography-root-41 MuiTypography-headline-46 MuiCardHeader-title-39"
        >
          test0
        </span>
        <span
          className="MuiTypography-root-41 MuiTypography-body1-50 MuiTypography-colorTextSecondary-63 MuiCardHeader-subheader-40"
        >
          cat0
        </span>
      </div>
    </div>
    <div
      className="MuiCardContent-root-65"
    >
      <p
        className="MuiTypography-root-41 MuiTypography-body1-50"
      >
        4 Total Players
      </p>
      <p
        className="MuiTypography-root-41 MuiTypography-body1-50"
      >
        4 Active Players
      </p>
    </div>
    <div
      className="MuiCardActions-root-66"
    >
      <a
        className="MuiButtonBase-root-92 MuiButton-root-68 MuiButton-text-70 MuiButton-flat-73 MuiButton-sizeSmall-89 APIComponent-right-6 MuiCardActions-action-67"
        href="/tournament/mock0"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="MuiButton-label-69"
        >
          Continue
        </span>
        <span
          className="MuiTouchRipple-root-95"
        />
      </a>
    </div>
  </div>
  <div
    className="MuiPaper-root-8 MuiPaper-elevation1-11 MuiPaper-rounded-9 MuiCard-root-7 APIComponent-card-5"
  >
    <div
      className="MuiCardHeader-root-35"
    >
      <div
        className="MuiCardHeader-content-38"
      >
        <span
          className="MuiTypography-root-41 MuiTypography-headline-46 MuiCardHeader-title-39"
        >
          test1
        </span>
        <span
          className="MuiTypography-root-41 MuiTypography-body1-50 MuiTypography-colorTextSecondary-63 MuiCardHeader-subheader-40"
        >
          cat1
        </span>
      </div>
    </div>
    <div
      className="MuiCardContent-root-65"
    >
      <p
        className="MuiTypography-root-41 MuiTypography-body1-50"
      >
        7 Total Players
      </p>
      <p
        className="MuiTypography-root-41 MuiTypography-body1-50"
      >
        7 Active Players
      </p>
    </div>
    <div
      className="MuiCardActions-root-66"
    >
      <a
        className="MuiButtonBase-root-92 MuiButton-root-68 MuiButton-text-70 MuiButton-flat-73 MuiButton-sizeSmall-89 APIComponent-right-6 MuiCardActions-action-67"
        href="/tournament/mock1"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="MuiButton-label-69"
        >
          Details
        </span>
        <span
          className="MuiTouchRipple-root-95"
        />
      </a>
    </div>
  </div>
</div>
`;
